@@ -1,3 +1,4 @@
+* Client side actions on button and wizard
 * Add depends attribute to data tag
 * Add tree_invisible attribute to button in tree view
 * Drop support of Python 2.6
